2003-10-02  Kenichi Handa  <handa@m17n.org>

	* international/utf-8.el (ccl-decode-mule-utf-8): Lookup
	utf-subst-table-for-decode even for U+E000..U+FFFF.

	* international/subst-jis.el: Include U+FF00..U+FFEF in decode
	table.
	* international/subst-big5.el: Likewise.
	* international/subst-gb2312.el: Likewise
	* international/subst-ksc.el: Likewise.

2003-10-01  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/calendar.el (increment-calendar-month)
	(calendar-leap-year-p, calendar-absolute-from-gregorian)
	(generate-calendar, calendar-read-date, calendar-interval)
	(calendar-day-of-week): Handle years BC.
	(generate-calendar-month, calendar-gregorian-from-absolute): Doc
	fix.

2003-10-01  Dave Love  <fx@gnu.org>

	* language/cyrillic.el (cp1251): Alias for windows-1251.

	* vc-cvs.el (vc-cvs-parse-entry): Revert last change to allow
	bootstrap.

2003-09-30  Richard M. Stallman  <rms@gnu.org>

	* dired.el (dired-mode): Handle dired-directory as a list.

2003-09-30  Nick Roberts  <nick@nick.uklinux.net>

	* toolbar/gud-watch.xpm, toolbar/gud-watch.pbm: Add.

	* toolbar/gud-display.xpm, toolbar/gud-display.pbm: Remove.

	* progmodes/gud.el (gud-menu-map, gud-tool-bar-map): Replace
	gud-display with gud-watch.
	(gud-speedbar-buttons): Add stuff for watching expressions
	in the speedbar when using M-x gdba. Use dolist on old part
	of this function.

	* gdb-ui.el (gdb-var-list, gdb-var-changed, gdb-update-flag)
	(gdb-update-flag): New variables.
	(gdb-var-update, gdb-var-update-handler,gdb-var-delete)
	(gdb-speedbar-expand-node, gdb-var-evaluate-expression-handler)
	(gud-watch, gdb-var-create-handler) : New functions.
	(gdb-var-list-children, gdb-var-list-children-handler)
	(gdb-var-create-regexp, gdb-var-update-regexp)
	(gdb-var-list-children-regexp): New constants.
	(gud-gdba-command-name): Don't specify -noasync so that GDB/MI
	works.
	(gdb-annotation-rules): Reduced annotation set (level 3).
	(gdb-pre-prompt, gdb-prompt): Call handler in gdb-prompt.